{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 100,
  "lineage": "c7d5d595-d1e1-3f82-f3f6-c1cb0f8b5a77",
  "resources": [
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-086cb4cc21ecf5d6c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086cb4cc21ecf5d6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d9757956475b763b",
            "private_dns": "ip-192-168-12-58.ap-south-1.compute.internal",
            "private_ip": "192.168.12.58",
            "public_ip": "13.234.202.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05813d62f5a9114aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb29e7593717394d",
            "tags": {
              "Name": "db-vm-1"
            },
            "tags_all": {
              "Name": "db-vm-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b24c28ab3ea362b5"
            ]
          },
          "dependencies": [
            "module.aws-infra.aws_key_pair.key-3",
            "module.aws-infra.aws_security_group.DB-SG",
            "module.aws-infra.aws_subnet.db-subnets",
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:592161164847:instance/i-0495abe616633500e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0495abe616633500e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f0a1e20a304133b",
            "private_dns": "ip-192-168-10-184.ap-south-1.compute.internal",
            "private_ip": "192.168.10.184",
            "public_ip": "15.206.69.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ebfdd218f1f7e6d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006000d8ea30968c5",
            "tags": {
              "Name": "web-vm-1"
            },
            "tags_all": {
              "Name": "web-vm-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dcb0639c0759f92d"
            ]
          },
          "dependencies": [
            "module.aws-infra.aws_key_pair.key-3",
            "module.aws-infra.aws_security_group.Web-SG",
            "module.aws-infra.aws_subnet.web-subnets",
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:internet-gateway/igw-03ad76a31057e4ece",
            "id": "igw-03ad76a31057e4ece",
            "owner_id": "592161164847",
            "tags": {
              "Name": "igw-2"
            },
            "tags_all": {
              "Name": "igw-2"
            },
            "vpc_id": "vpc-04ffdddeaff7679b8"
          },
          "dependencies": [
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:route-table/rtb-0d3246621e4be2fc3",
            "id": "rtb-0d3246621e4be2fc3",
            "owner_id": "592161164847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ad76a31057e4ece",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ffdddeaff7679b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-infra.aws_internet_gateway.igw-2",
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-1-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057f46fdb41b80ddc",
            "route_table_id": "rtb-0d3246621e4be2fc3",
            "subnet_id": "subnet-006000d8ea30968c5"
          },
          "dependencies": [
            "module.aws-infra.aws_internet_gateway.igw-2",
            "module.aws-infra.aws_route_table.public_route_table",
            "module.aws-infra.aws_subnet.web-subnets",
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-2-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062620a402fae20c0",
            "route_table_id": "rtb-0d3246621e4be2fc3",
            "subnet_id": "subnet-0d25e48f86ab1ac19"
          },
          "dependencies": [
            "module.aws-infra.aws_internet_gateway.igw-2",
            "module.aws-infra.aws_route_table.public_route_table",
            "module.aws-infra.aws_subnet.web-subnets",
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:security-group/sg-0b24c28ab3ea362b5",
            "description": "Allow traffic only from within the vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b24c28ab3ea362b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Allow all ssh traffic from within the vpc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Allow all traffic from within the vpc - for ping test",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "for DB instances",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DB-SG",
            "name_prefix": "",
            "owner_id": "592161164847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB-SG"
            },
            "tags_all": {
              "Name": "DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ffdddeaff7679b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Web-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:security-group/sg-0dcb0639c0759f92d",
            "description": "Allow ssh, http \u0026 https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcb0639c0759f92d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Web-SG",
            "name_prefix": "",
            "owner_id": "592161164847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ffdddeaff7679b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0bb29e7593717394d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb29e7593717394d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-1"
            },
            "tags_all": {
              "Name": "db-1"
            },
            "vpc_id": "vpc-04ffdddeaff7679b8"
          },
          "dependencies": [
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-09bcbd482f914ee14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bcbd482f914ee14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-2"
            },
            "tags_all": {
              "Name": "db-2"
            },
            "vpc_id": "vpc-04ffdddeaff7679b8"
          },
          "dependencies": [
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-006000d8ea30968c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006000d8ea30968c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-1"
            },
            "tags_all": {
              "Name": "web-1"
            },
            "vpc_id": "vpc-04ffdddeaff7679b8"
          },
          "dependencies": [
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:subnet/subnet-0d25e48f86ab1ac19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d25e48f86ab1ac19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "592161164847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-2"
            },
            "tags_all": {
              "Name": "web-2"
            },
            "vpc_id": "vpc-04ffdddeaff7679b8"
          },
          "dependencies": [
            "module.aws-infra.aws_vpc.primary-vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary-vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:592161164847:vpc/vpc-04ffdddeaff7679b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-090d8928172584224",
            "default_route_table_id": "rtb-04e82c38c6405930a",
            "default_security_group_id": "sg-0d4d60e9018c04b37",
            "dhcp_options_id": "dopt-08e25d63",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04ffdddeaff7679b8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04e82c38c6405930a",
            "owner_id": "592161164847",
            "tags": {
              "Name": "spc-vpc"
            },
            "tags_all": {
              "Name": "spc-vpc"
            }
          }
        }
      ]
    }
  ]
}